# ConanTemplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan.sh  conanfile.py
src/: CMakeLists.txt  main.cpp
src/firstlib/: CMakeLists.txt  first.cpp  first.h
src/hellolib/: CMakeLists.txt  hello.cpp
src/secondlib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  second.cpp  second.h
test_package/: CMakeLists.txt  CMakeUserPresets.json
test_package/src/: example.cpp
tests/: CMakeLists.txt
